--- a/jobs/static/style.css
+++ b/jobs/static/style.css
@@ -8,37 +8,41 @@
 }
 
 body {
-  width: 1024px;
+  width: 800px;
   margin-left: auto;
   margin-right: auto;
   padding-top: 120px;
   color: #204a87;
+  background: url('background.png') no-repeat center center;
+  background-attachment: fixed;
+  background-position: 0;
 }
 
 header {
   width: 100%;
   height: 50px;
-  position: absolute;
+  position: fixed;
   top:0;
   left:0;
-/*  background: linear-gradient(to top, #000000 0%, #2e3436 100%);*/
+  background: linear-gradient(to top, #204a87 0%, #3465a4 100%);
   color: #000000;
 }
 
 header img, header h1 {
   float: left;
   margin: 0px;
-  margin-left: 10px;
   height: 50px;
   line-height: 50px;
+  color: white;
 }
 
 /* Navigation Menu */
-
 #id_current_user {
   float: right;
   margin-right: 20px;
+  height: 50px;
   line-height: 50px;
+  color: white;
 }
 
 ul {
@@ -54,33 +58,27 @@ li {
 
 nav {
   font-size: 14px;
-  width: 100%;
-  height: 40px;
-  position: absolute;
-  top: 50px;
-  left: 0;
-  background: linear-gradient(to top, #204a87 0%, #3465a4 100%);
-/*	  -moz-border-image: -moz-linear-gradient(top, #3acfd5 0%, #3a4ed5 100%);
-	  -webkit-border-image: -webkit-linear-gradient(top, #3acfd5 0%, #3a4ed5 100%);*/
+  width: 60%;
+  height: 50px;
+  line-height: 50px;
+  float: left;
 }
 
 nav ul {
-  margin: auto;
-  width: 80%;
-  list-style: none;
+  height: 50px;
+  line-height: 50px;
   float: left;
 }
 
 nav ul li a:link, nav ul li a:visited {
-  display: block;
+  display: inline-block;
+  width: 200px;
   height: 100%;
-  width: 250px;
   font-weight: bold;
   color: #ffffff;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
-  line-height: 40px;
 }
 
 nav ul li a:hover, nav ul li a:active {
@@ -155,7 +153,6 @@ input {
   border-radius: 6px;
 }
 
-/*  */
 button {
   cursor: pointer;
   border: none;
