--- a/jobs/templates/available_jobs.html
+++ b/jobs/templates/available_jobs.html
@@ -52,7 +52,7 @@
           </td>
           <td>
           <button type="submit" name="job_name" value="{{ job.name }}">
-            <img src="{% static "icons/play128.png" %}" alt="start {{ job.name }}" height="10" width="10" />
+            <img src="{% static "icons/diskette18.png" %}" alt="start {{ job.name }}" height="10" width="10" />
           </button>
           </form>
           </td>
