--- a/jobs/templates/create_account.html
+++ b/jobs/templates/create_account.html
@@ -18,6 +18,7 @@
     </header>
     <article>
       <h1>Fill in your data</h1>
+      <p>Provide your personal data to request for an user account. Please note that your profile will not be activated until the administrator authorize your request. You will be notified to the email address provided in the form below.<p/>
       <form method="POST" action="/account/create/">
         {% csrf_token %}
         <fieldset>
