--- a/jobs/templates/running_jobs.html
+++ b/jobs/templates/running_jobs.html
@@ -16,6 +16,7 @@
           <li><a href="/" id="id_home">Home</a></li>
           <li><a href="/jobs/available" id="id_available_jobs">Available Jobs</a></li>
           <li><a href="/jobs/running" id="id_running_jobs">Running Jobs</a></li>
+          <li><a href="/jobs/finished" id="id_running_jobs">Finished Jobs</a></li>
           <li><a href="/logout" id="id_logout">Log out</a></li>
         </ul>
       </nav>
@@ -23,7 +24,7 @@
       {% endif %}
     </header>
     <article>
-      <h1>List of running jobs</h1>
+      <h1>List of {{ status }} jobs</h1>
       <p>These are the jobs you have submitted.</p>
       <table id="id_running_jobs">
         <tr>
