--- a/jobs/templates/submit_job.html
+++ b/jobs/templates/submit_job.html
@@ -16,6 +16,7 @@
           <li><a href="/" id="id_home">Home</a></li>
           <li><a href="/jobs/available" id="id_available_jobs">Available Jobs</a></li>
           <li><a href="/jobs/running" id="id_running_jobs">Running Jobs</a></li>
+          <li><a href="/jobs/finished" id="id_running_jobs">Finished Jobs</a></li>
           <li><a href="/logout" id="id_logout">Log out</a></li>
         </ul>
       </nav>
