--- a/jobs/static/style.css
+++ b/jobs/static/style.css
@@ -1,81 +1,88 @@
 .center {
-  width: 50%;
-  padding: 0px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 5px;
   margin-bottom: 5px;
+  padding: 0px;
+  width: 50%;
 }
 
 body {
-  width: 800px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: 120px;
-  color: #204a87;
   background: url('background.png') repeat-x center center;
   background-attachment: fixed;
   background-position: 0;
+  color: #204a87;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 120px;
+  width: 90%;
 }
 
 header {
-  width: 100%;
-  height: 50px;
-  position: fixed;
-  top:0;
-  left:0;
   background: linear-gradient(to top, #204a87 0%, #3465a4 100%);
   color: #000000;
+  height: 50px;
+  left:0;
+  width: 100%;
+  position: fixed;
+  top:0;
 }
 
 header img, header h1 {
+  color: white;
   float: left;
-  margin: 0px;
   height: 50px;
   line-height: 50px;
-  color: white;
+  margin: 0px;
 }
 
 /* Navigation Menu */
 #id_current_user {
-  float: right;
-  margin-right: 20px;
+  position: fixed;
+  right: 0px;
+  top: 0px;
+  color: white;
+  display: inline-block;
+/*  float: right;*/
+/*  width: 100px;*/
   height: 50px;
   line-height: 50px;
-  color: white;
+  margin-right: 20px;
 }
 
 ul {
   list-style-type: none;
   margin: 0;
-  padding: 0;
   overflow: hidden;
+  padding: 0;
 }
 
-li {
+/*li {
   float: left;
-}
+}*/
 
 nav {
+  display: block;
   font-size: 14px;
-  width: 60%;
   height: 50px;
   line-height: 50px;
-  float: left;
 }
 
 nav ul {
   height: 50px;
   line-height: 50px;
-  float: left;
+}
+
+nav ul li {
+  display: inline-block;
+  list-style-type: none;
 }
 
 nav ul li a:link, nav ul li a:visited {
-  display: inline-block;
-  width: 200px;
-  height: 100%;
-  font-weight: bold;
   color: #ffffff;
+  display: block;
+  font-weight: bold;
+  padding: 0 24px;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
@@ -87,24 +94,24 @@ nav ul li a:hover, nav ul li a:active {
 }
 
 article {
-  width: 80%;
   float: right;
+  width: 80%;
 }
 
 div.container {
-  width: 30em;
   border: 2px solid;
   border-radius: 10px;
-  padding: 10px;
   margin-left: auto;
   margin-right: auto;
+  padding: 10px;
+  width: 30em;
 }
 
 div.box {
   -moz-box-sizing: border-box; /* Firefox */
   box-sizing: border-box;
-  width: 50%;
   float: left;
+  width: 50%;
 }
 
 /* forms */
@@ -114,9 +121,9 @@ form {
 }
 
 fieldset {
-  width: 600px;
   border: 2px solid;
   border-radius: 10px;
+  width: 600px;
 }
 
 fieldset p {
@@ -129,37 +136,82 @@ legend {
 }
 
 label {
-  text-align: left;
-  width: 25%;
   float: left;
   font-weight: bold;
+  text-align: left;
+  width: 25%;
 }
 
 input {
-  width: 70%;
   float: left;
+  width: 70%;
 }
 
 /* Especificos */
 .submit {
-  float: right;
-  width: 200px;
-  height: 50px;
-  font-weight: bold;
-  text-transform: uppercase;
-  color: white;
   background: linear-gradient(to top, #204a87 0%, #3465a4 100%);
   border: none;
   border-radius: 6px;
+  color: white;
+  float: right;
+  font-weight: bold;
+  height: 50px;
+  text-transform: uppercase;
+  width: 200px; 
 }
 
 button {
-  cursor: pointer;
-  border: none;
   background: none;
+  border: none;
+  cursor: pointer;
 }
 
 input#id_job_name {
   background: none;
   border: none;
+}
+
+table {
+  width: 100%;
+}
+
+th, td {
+  text-align: left;
+}
+
+a.tooltip {
+  outline:none;
+}
+
+a.tooltip strong {
+  line-height: 30px;
+}
+
+a.tooltip:hover {
+  text-decoration: none;
+} 
+
+a.tooltip span {
+  display: none;
+  line-height: 20px;
+  margin-top: -30px;
+  margin-left: 28px;
+  padding: 10px 10px;
+  width: 300px;
+  z-index: 10;
+}
+
+a.tooltip:hover span {
+  display: inline;
+  position: absolute;
+  color: #204a87;
+  border: 1px solid #DCA;
+  background: #fffAF0;
+}
+
+/*CSS3 extras*/
+a.tooltip span
+{
+  border-radius: 4px;
+  box-shadow: 5px 5px 8px #CCC;
 }
