--- a/jobs/templates/login.html
+++ b/jobs/templates/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>CIEMAT Web</title>
+    <title>HPC</title>   
     {% load staticfiles %}
     <link rel="stylesheet" type="text/css" href="{% static "style.css" %}" />
   </head>
@@ -9,7 +9,7 @@
     <header>
       <img src="{% static "logo_ciemat.gif" %}" alt="CIEMAT logo" height="50" width="50">
       <img src="{% static "logo_uned.png" %}" alt="UNED logo" height="50" width="50">
-      <h1>CIEMAT Web</h1>
+      <h1>HPC</h1>
       <nav id="id_links">
         <ul>
           <li><a href="/" id="id_home">Home</a></li>
