--- a/jobs/templates/running_jobs.html
+++ b/jobs/templates/running_jobs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>CIEMAT Web</title> 
+    <title>HPC</title>   
     {% load staticfiles %}
     <link rel="stylesheet" type="text/css" href="{% static "style.css" %}" />
   </head>
@@ -9,7 +9,7 @@
     <header>
       <img src="{% static "logo_ciemat.gif" %}" alt="CIEMAT logo" height="50" width="50">
       <img src="{% static "logo_uned.png" %}" alt="UNED logo" height="50" width="50">
-      <h1>CIEMAT Web</h1>
+      <h1>HPC</h1>
       {% if user.is_authenticated %}
       <nav id="id_links">
         <ul>
@@ -33,8 +33,10 @@
           <th>Date</th>
           <th>Status</th>
           <th>Input</th>
+          {% ifequal status "completed" %}
           <th>Results</th>
           <th>Log</th>
+          {% endifequal %}
         </tr>
       {% for runningjob in list.all %}
         <tr>
@@ -56,6 +58,7 @@
             </button>
             </form>
           </td>
+          {% ifequal status "completed" %}
           <td>
             <form method="GET" action="/jobs/get">
             <input type="hidden" name="field" value="job_output" />
@@ -72,6 +75,7 @@
             </button>
             </form>
           </td>
+          {% endifequal %}
         </tr>
       {% endfor %}
       </table>
