--- a/jobs/templates/create_account.html
+++ b/jobs/templates/create_account.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>HPC</title>   
-    {% load staticfiles %}
+    {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static "style.css" %}" />
   </head>
   <body>
