--- a/jobs/templates/login.html
+++ b/jobs/templates/login.html
@@ -12,7 +12,7 @@
       <h1>HPC</h1>
       <nav id="id_links">
         <ul>
-          <li><a href="/" id="id_home">Home</a></li>
+          <li><a href="/" id="id_home">Homee</a></li>
         </ul>
       </nav>
     </header>
