--- a/jobs/static/css/sb-admin-2.css
+++ b/jobs/static/css/sb-admin-2.css
@@ -67,6 +67,7 @@ body {
   color: #858796;
   text-align: left;
   background-color: #fff;
+  background-image: url(/static/background.png);
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
