--- a/jobs/templates/available_jobs.html
+++ b/jobs/templates/available_jobs.html
@@ -1,74 +1,86 @@
-<!DOCTYPE HTML>
-<html>
-  <head>
-    <title>HPC</title>   
-    {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static "style.css" %}" />
-  </head>
-  <body>
-    <header>
-      <img src="{% static "logo_ciemat.gif" %}" alt="CIEMAT logo" height="50" width="50" />
-      <img src="{% static "logo_uned.png" %}" alt="UNED logo" height="50" width="50" />
-      <h1>HPC</h1>
-      {% if user.is_authenticated %}
-      <nav id="id_links">
-        <ul>
-          <li><a href="/" id="id_home">Home</a></li>
-          <li><a href="/jobs/available" id="id_available_jobs">Available Jobs</a></li>
-          <li><a href="/jobs/running" id="id_running_jobs">Running Jobs</a></li>
-          <li><a href="/jobs/finished" id="id_running_jobs">Finished Jobs</a></li>
-          <li><a href="/logout" id="id_logout">Log out</a></li>
-        </ul>
-      </nav>
-      <div id="id_current_user">user logged as {{ user.username }}</div>
-      {% endif %}
-    </header>
-    <article>
-      <h1>List of available jobs</h1>
-      <p>These are the jobs you have available to submit.</p>
-      <table id="id_available_jobs">
-        <tr>
-          <th></th>
-          <th>Id</th>
-          <th>Job Name</th>
-          <th>Required Files</th>
-          <th>Output</th>
-          <th>Description</th>
-          <th></th>
-          <th></th>
-        </tr>
-      {% for job in list %}
-        <tr>
-          <td>
-          <form method="GET" action="/jobs/submit">
-          <button type="submit" name="job_name" value="{{ job.name }}">
-            <img src="{% static "icons/play128.png" %}" alt="start {{ job.name }}" height="10" width="10" />
-          </button>
-          </form>
-          </td>
-          <td>{{ forloop.counter }}</td>
-          <td>{{ job.name }}</td>
-          <td>{{ job.input }}</td>
-          <td>{{ job.output }}</td>
-          <td>{{ job.description }}</td>
-          <td>
-            <a href="#" class="tooltip">
-              more...
-              <span>{{ job.detailed_description }}</span>
-            </a>
-          </td>
-          <form method="GET" action="/jobs/submit">
-          <td>
-          <button type="submit" name="job_name" value="{{ job.name }}">
-            <img src="{% static "icons/diskette18.png" %}" alt="start {{ job.name }}" height="10" width="10" />
-          </button>
-          </form>
-          </td>
-        </tr>
-      {% endfor %}
-      </table>
-    </article>
-    <!--<footer>Icons made by <a href="http://www.flaticon.com/authors/egor-rumyantsev" title="Egor Rumyantsev">Egor Rumyantsev</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>             is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a>-->
-    </footer>
-  </body>
-</html>
+{% extends 'base.html' %} 
+
+{% block content %} 
+
+{% if user.is_authenticated %}
+
+<div class="container-fluid mt--7">
+	<!-- Table -->
+	<div class="row">
+		<div class="col">
+			<div class="card shadow">
+				<div class="card-header border-0">
+					<h3 class="mb-0">List of available jobs</h3>
+				</div>
+				<div class="table-responsive">
+					<table class="table align-items-center table-flush">
+						<thead class="thead-light">
+							<tr>
+								<th scope="col"></th>
+								<th scope="col">Id</th>
+								<th scope="col">Job Name</th>
+								<th scope="col">Required Files</th>
+								<th scope="col">Output</th>
+								<th scope="col">Description</th>
+								<th scope="col"></th>
+								<th scope="col"></th>
+							</tr>
+						</thead>
+						<tbody>
+							{% for job in list %}
+							<tr>
+								<td>
+									<form method="GET" action="/jobs/submit">
+										<button type="submit" name="job_name" value="{{ job.name }}" class="btn default">
+											<img src="/static/assets/img/theme/react.jpg" alt="start {{ job.name }}" height="20" width="20" />
+										</button>		
+									</form>
+								</td>
+								<td>{{ forloop.counter }}</td>
+								<td>{{ job.name }}</td>
+								<td>{{ job.input }}</td>
+								<td>{{ job.output }}</td>
+								<td>{{ job.description }}</td>
+								<td><a href="#" class="tooltip"> more... <span>{{job.detailed_description }}</span></a></td>
+								<form method="GET" action="/jobs/submit">
+									<td><button type="submit" name="job_name" value="{{ job.name }}" class="btn default">
+											<img src="/static/icons/diskette19.png"	alt="start {{ job.name }}" height="20" width="20" />
+										</button>
+									</td>
+									<!-- <td><button type="submit" class="btn btn-info btn-lg"><span class="glyphicon-floppy-disk"></span>Disk</button></td>-->
+								</form>
+							</tr>
+							{% endfor %}
+						</tbody>
+					</table>
+				</div>
+				<div class="card-footer py-4">
+					<nav aria-label="...">
+						<ul class="pagination justify-content-end mb-0">
+							<li class="page-item disabled"><a class="page-link" href="#" tabindex="-1">
+						    <i class="fas fa-angle-left"></i> 
+						    <span class="sr-only">Previous</span>
+							</a>
+							</li>
+							<li class="page-item active"><a class="page-link" href="#">1</a>
+							</li>
+							<li class="page-item"><a class="page-link" href="#">2 <span
+									class="sr-only">(current)</span></a></li>
+							<li class="page-item"><a class="page-link" href="#">3</a></li>
+							<li class="page-item"><a class="page-link" href="#"> <i
+									class="fas fa-angle-right"></i> <span class="sr-only">Next</span>
+							</a></li>
+						</ul>
+					</nav>
+				</div>
+			</div>
+		</div>
+	</div>
+
+</div>
+
+{% endif %} 
+{% endblock content %}
+
+
+
