--- a/jobs/templates/base.html
+++ b/jobs/templates/base.html
@@ -19,67 +19,69 @@
 <!-- Static assets - Used to load the Favicon -->
 {% load static %}
 
+
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  
-  <title>
-    HPC - {% block title %} Server {% endblock %} 
-  </title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Favicon - loaded as static -->
-  <link href="{% static 'logo_uned.png' %}" rel="icon" type="image/png">
-  
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
-  <!-- Icons -->
-  <link href="/static/assets/js/plugins/nucleo/css/nucleo.css" rel="stylesheet" />
-  <link href="/static/assets/js/plugins/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet" />
-  <!-- CSS Files -->
-  <link href="/static/assets/css/argon-dashboard.css?v=1.1.0" rel="stylesheet" />
+<title>HPC - {% block title %} Server {% endblock %}</title>
 
-  <!-- Specific CSS goes HERE -->
-  {% block stylesheets %}{% endblock stylesheets %}
+<!-- Favicon - loaded as static -->
+<link href="{% static 'logo_uned.png' %}" rel="icon" type="image/png">
+
+<!-- Fonts -->
+<link
+	href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700"
+	rel="stylesheet">
+<!-- Icons -->
+<link href="/static/assets/js/plugins/nucleo/css/nucleo.css"
+	rel="stylesheet" />
+<link
+	href="/static/assets/js/plugins/@fortawesome/fontawesome-free/css/all.min.css"
+	rel="stylesheet" />
+<!-- CSS Files -->
+<link href="/static/assets/css/argon-dashboard.css?v=1.1.0"
+	rel="stylesheet" />
+
+<!-- Specific CSS goes HERE -->
+{% block stylesheets %} {% endblock stylesheets %}
 
 </head>
 
 <body class="">
 
-  {% include "includes/sidenav.html" %}
+	{% include "includes/sidenav.html" %}
 
-  <div class="main-content">
+	<div class="main-content">
 
-    {% include "includes/navigation.html" %}
-    
-    <!-- Header -->
-    <div class="header bg-gradient-primary pb-8 pt-5 pt-md-8">
-      <div class="container">
-        <div class="header-body">
-        </div>
-      </div>
-    </div>
+		{% include "includes/navigation.html" %}
 
-    {% block content %}{% endblock content %}     
+		<!-- Header -->
+		<div class="header bg-gradient-primary pb-8 pt-5 pt-md-8">
+			<div class="container">
+				<div class="header-body"></div>
+			</div>
+		</div>
 
-  </div>
-  
-   <!-- Footer -->
+		{% block content %} {% endblock content %}
+
+	</div>
+
+	<!-- Footer -->
 	<footer class="sticky-footer bg-white">
 		<div class="container my-auto">
 			<div class="copyright text-center my-auto">
-				<span>Copyright &copy; Your Website 2020</span>
+				<span>Copyright &copy; HPC - Server 2021</span>
 			</div>
 		</div>
 	</footer>
 	<!-- End of Footer -->
-	
-	{% include "includes/footer.html" %}
-	
+    
 
-  {% include "includes/scripts.html" %}
+	{% include "includes/scripts.html" %}
 
-  <!-- Specific JS goes HERE --> 
-  {% block javascripts %}{% endblock javascripts %}
+	<!-- Specific JS goes HERE -->
+	{% block javascripts %} {% endblock javascripts %}
 
 </body>
 
