--- a/jobs/templates/includes/navigation-fullscreen.html
+++ b/jobs/templates/includes/navigation-fullscreen.html
@@ -2,7 +2,10 @@
     <nav class="navbar navbar-top navbar-horizontal navbar-expand-md navbar-dark">
       <div class="container px-4">
         <a class="navbar-brand" href="/">
-          <img src="/static/assets/img/brand/white.png" />
+            <img src="/static/logoUNED.png" class="navbar-brand-img" alt="www.uned.es">
+			<img src="/static/logoUCM.png" class="navbar-brand-img" alt="...">
+			<img src="/static/logoCIEMAT.png" class="navbar-brand-img" alt="...">
+			<img src="/static/logoUMURCIA.png" class="navbar-brand-img" alt="...">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse-main" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -27,22 +30,22 @@
           <!-- Navbar items -->
           <ul class="navbar-nav ml-auto">
 
-            <li class="nav-item">
-              <a target="_blank" 
-                 class="nav-link nav-link-icon" 
-                 href="https://github.com/creativetimofficial/argon-dashboard-django">
-                <i class="ni ni-ui-04"></i>
-                <span class="nav-link-inner--text">Source Code</span>
-              </a>
-            </li>
+<!--             <li class="nav-item"> -->
+<!--               <a target="_blank"  -->
+<!--                  class="nav-link nav-link-icon"  -->
+<!--                  href="https://github.com/creativetimofficial/argon-dashboard-django"> -->
+<!--                 <i class="ni ni-ui-04"></i> -->
+<!--                 <span class="nav-link-inner--text">Source Code</span> -->
+<!--               </a> -->
+<!--             </li> -->
 
-            <li class="nav-item">
-              <a target="_blank" 
-                 class="nav-link nav-link-icon" href="https://www.creative-tim.com/templates/django">
-                <i class="ni ni-spaceship"></i>
-                <span class="nav-link-inner--text">More Apps</span>
-              </a>
-            </li>
+<!--             <li class="nav-item"> -->
+<!--               <a target="_blank"  -->
+<!--                  class="nav-link nav-link-icon" href="https://www.creative-tim.com/templates/django"> -->
+<!--                 <i class="ni ni-spaceship"></i> -->
+<!--                 <span class="nav-link-inner--text">More Apps</span> -->
+<!--               </a> -->
+<!--             </li> -->
 
           </ul>
         </div>
