--- a/jobs/templates/includes/sidenav.html
+++ b/jobs/templates/includes/sidenav.html
@@ -7,7 +7,10 @@
       </button>
       <!-- Brand -->
       <a class="navbar-brand pt-0" href="/"> 
-        <img src="/static/logo_uned.png" class="navbar-brand-img" alt="...">
+        <img src="/static/logoUNED.png" class="navbar-brand-img" alt="www.uned.es">
+		<img src="/static/logoUCM.png" class="navbar-brand-img" alt="...">
+		<img src="/static/logoCIEMAT.png" class="navbar-brand-img" alt="...">
+			<img src="/static/logoUMURCIA.png" class="navbar-brand-img" alt="...">		
       </a>
       <!-- User -->
       <ul class="nav align-items-center d-md-none">
@@ -104,12 +107,12 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="/profile.html">
+            <a class="nav-link " href="/jobs/finished_jobs.html">
               <i class="ni ni-single-02 text-yellow"></i> Finished Jobs
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="/tables.html">
+            <a class="nav-link " href="#">
               <i class="ni ni-bullet-list-67 text-info"></i> ...
             </a>
           </li>
