--- a/jobs/templates/layouts/base-fullscreen.html
+++ b/jobs/templates/layouts/base-fullscreen.html
@@ -24,11 +24,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <title>
-    Argon Dashboard Django - {% block title %} Open-Source Admin Panel {% endblock %} | Creative-Tim
+   HPC - {% block title %} Server Admin Panel {% endblock %}
   </title>
 
   <!-- Favicon - loaded as static -->
-  <link href="{% static 'assets/img/brand/favicon.png' %}" rel="icon" type="image/png">
+  <link href="{% static 'logo_uned.png' %}" rel="icon" type="image/png">
   
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
@@ -54,17 +54,18 @@
       <div class="container">
         <div class="header-body text-center mb-7">
           <div class="row justify-content-center">
-            <div class="col-lg-5 col-md-6">
-              <h1 class="text-white">
-                <a target="_blank" class="text-white"
-                   href="https://www.creative-tim.com/product/argon-dashboard-django">Argon Dashboard Django</a>
-              </h1>
-              <p class="text-lead text-light">
-                UI-Ready open-source admin panel enhanced with database and authentication - 
-                Coded by <a target="_blank" class="text-white" href="https://www.creative-tim.com/">Creative-Tim</a> 
-                and <a target="_blank" class="text-white" href="https://appseed.us">AppSeed</a>.  
-              </p>
-            </div>
+<!--             <div class="col-lg-5 col-md-6"> -->
+<!--               <h1 class="text-white"> -->
+<!--                  <a target="_blank" class="text-white" --> 
+<!--                     href="https://www.creative-tim.com/product/argon-dashboard-django">Argon Dashboard Django --> 
+<!--                     </a> --> 
+<!--               </h1> -->
+<!--               <p class="text-lead text-light"> -->
+<!--                 UI-Ready open-source admin panel enhanced with database and authentication -  -->
+<!--                 Coded by <a target="_blank" class="text-white" href="https://www.creative-tim.com/">Creative-Tim</a>  -->
+<!--                 and <a target="_blank" class="text-white" href="https://appseed.us">AppSeed</a>.   -->
+<!--               </p> -->
+<!--             </div> -->
           </div>
         </div>
       </div>
@@ -77,7 +78,7 @@
     
     {% block content %}{% endblock content %}
 
-    {% include "includes/footer-fullscreen.html" %}
+<!--     {% include "includes/footer-fullscreen.html" %} -->
 
   </div>
     
