--- a/jobs/templates/running_jobs.html
+++ b/jobs/templates/running_jobs.html
@@ -1,84 +1,123 @@
-<!DOCTYPE HTML>
-<html>
-  <head>
-    <title>HPC</title>   
-    {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static "style.css" %}" />
-  </head>
-  <body>
-    <header>
-      <img src="{% static "logo_ciemat.gif" %}" alt="CIEMAT logo" height="50" width="50">
-      <img src="{% static "logo_uned.png" %}" alt="UNED logo" height="50" width="50">
-      <h1>HPC</h1>
-      {% if user.is_authenticated %}
-      <nav id="id_links">
-        <ul>
-          <li><a href="/" id="id_home">Home</a></li>
-          <li><a href="/jobs/available" id="id_available_jobs">Available Jobs</a></li>
-          <li><a href="/jobs/running" id="id_running_jobs">Running Jobs</a></li>
-          <li><a href="/jobs/finished" id="id_running_jobs">Finished Jobs</a></li>
-          <li><a href="/logout" id="id_logout">Log out</a></li>
-        </ul>
-      </nav>
-      <div id="id_current_user">user logged as {{ user.username }}</div>
-      {% endif %}
-    </header>
-    <article>
-      <h1>List of {{ status }} jobs</h1>
-      <p>These are the jobs you have submitted.</p>
-      <table id="id_running_jobs">
-        <tr>
-          <th></th>
-          <th>Name</th>
-          <th>Date</th>
-          <th>Status</th>
-          <th>Input</th>
-          {% ifequal status "completed" %}
-          <th>Results</th>
-          <th>Log</th>
-          {% endifequal %}
-        </tr>
-      {% for runningjob in list.all %}
-        <tr>
-          <td>
-            <form method="GET" action="/jobs/cancel">
-            <button type="submit" name="job_id" value="{{ runningjob.runningjob_id }}">
-            <img src="{% static "icons/cancel30.png" %}" alt="cancel {{ runningjob.runningjob_id }}" height="10" widht="10" />
-            </button>
-            </form>
-          </td>
-          <td>{{ runningjob.job.name }}</td>
-          <td>{{ runningjob.timestamp }}</td>
-          <td>{{ runningjob.status }}</td>
-          <td>
-            <form method="GET" action="/jobs/get/">
-            <input type="hidden" name="field" value="job_input" />
-            <button type="submit" name="job_id" value="{{ runningjob.runningjob_id }}">
-            <img src="{% static "icons/diskette18.png" %}" alt="start {{ runningjob.runningjob_id }}" height="10" widht="10" />
-            </button>
-            </form>
-          </td>
-          {% ifequal status "completed" %}
-          <td>
-            <form method="GET" action="/jobs/get">
-            <input type="hidden" name="field" value="job_output" />
-            <button type="submit" name="job_id" value="{{ runningjob.runningjob_id }}">
-            <img src="{% static "icons/diskette18.png" %}" alt="start {{ runningjob.runningjob_id }}" height="10" widht="10" />
-            </button>
-            </form>
-          </td>
-          <td>
-            <form method="GET" action="/jobs/get">
-            <input type="hidden" name="field" value="job_log" />
-            <button type="submit" name="job_id" value="{{ runningjob.runningjob_id }}">
-            <img src="{% static "icons/diskette18.png" %}" alt="start {{ runningjob.runningjob_id }}" height="10" widht="10" />
-            </button>
-            </form>
-          </td>
-          {% endifequal %}
-        </tr>
-      {% endfor %}
-      </table>
-    </article>
-  </body>
-</html>
+{% extends 'base.html' %} 
+
+{% block content %} 
+
+{% load crispy_forms_tags %}
+
+{% if user.is_authenticated %}
+
+
+
+
+<div class="container-fluid mt--7">
+	<!-- Table -->
+	<div class="row">
+		<div class="col">
+			<div class="card shadow">
+				<div class="card-header border-0">
+					<h3 class="mb-0">List of {{ status }} jobs</h3>
+				</div>
+				<div class="table-responsive">
+					<table class="table align-items-center table-flush">
+						<thead class="thead-light">
+							<tr>
+								<th scope="col">Cancel</th>
+								<th scope="col">Job Name</th>
+								<th scope="col">Date</th>
+								<th scope="col">Status</th>
+								<th scope="col">Input</th>								
+								<th scope="col">Output</th>								
+								<th scope="col">Log</th>
+							</tr>
+						</thead>
+						<tbody>
+							{% for runningjob in list.all %}
+							<tr>
+								<td>
+									<form method="GET" action="/jobs/cancel">
+										<button type="submit" name="job_id" value="{{ runningjob.runningjob_id }}" class="btn default">
+											<img src="/static/icons/cancel30.png" alt="cancel {{ runningjob.runningjob_id }}" height="10" widht="10" />
+										</button>
+									</form>
+								</td>
+
+								<td>{{ runningjob.job.name }}</td>
+								<td>{{ runningjob.timestamp }}</td>
+								
+								{% ifequal status "completed" %}
+								<td>
+									<span class="badge badge-dot">
+							        	 <i class="bg-success"></i> {{ runningjob.status }}        
+							        </span>
+							     </td>	
+						    
+							    {% else %}								     
+							     <td>
+									<span class="badge badge-dot">
+							        	 <i class="bg-warning"></i> {{ runningjob.status }}        
+							        </span>
+							     </td>	
+							      				     
+							    {% endifequal %}
+
+							<td>
+								<form method="GET" action="/jobs/get/">
+									<input type="hidden" name="field" value="job_input" />
+									<button type="submit" name="job_id"	value="{{ runningjob.runningjob_id }}" class="btn default">
+										<img src="/static/icons/diskette19.png"	alt="start {{ runningjob.runningjob_id }}" height="20"	widht="20" />
+									</button>
+								</form>
+							</td> 
+								{% ifequal status "completed" %}
+								<td>
+									<form method="GET" action="/jobs/get">
+										<input type="hidden" name="field" value="job_output" />
+										<button type="submit" name="job_id"	value="{{ runningjob.runningjob_id }}" class="btn default">
+											<img src="/static/icons/diskette19.png"	alt="start {{ runningjob.runningjob_id }}" height="20"	widht="20" />
+										</button>
+									</form>
+								</td>
+								<td>
+									<form method="GET" action="/jobs/get">
+										<input type="hidden" name="field" value="job_log" />
+										<button type="submit" name="job_id"	value="{{ runningjob.runningjob_id }}" class="btn default">
+											<img src="/static/icons/diskette19.png"	alt="start {{ runningjob.runningjob_id }}" height="20"	widht="20" />
+										</button>
+									</form>
+								</td>
+								 {% endifequal %}
+							</tr>
+							{% endfor %}
+						</tbody>
+					</table>
+				</div>
+				<div class="card-footer py-4">
+					<nav aria-label="...">
+						<ul class="pagination justify-content-end mb-0">
+							<li class="page-item disabled"><a class="page-link" href="#" tabindex="-1"> 
+							<i class="fas fa-angle-left"></i> 
+							<span class="sr-only">Previous</span>
+							</a>
+							</li>
+							<li class="page-item active"><a class="page-link" href="#">1</a>
+							</li>
+							<li class="page-item"><a class="page-link" href="#">2 <span	class="sr-only">(current)</span></a></li>
+							<li class="page-item"><a class="page-link" href="#">3</a></li>
+							<li class="page-item"><a class="page-link" href="#"> <i	class="fas fa-angle-right"></i> <span class="sr-only">Next</span>
+							</a></li>
+						</ul>
+					</nav>
+				</div>
+			</div>
+		</div>
+	</div>
+
+</div>
+
+{% endif %}
+{% endblock content %}
+
+
+
+
+
