+ Project and project types are retrieved now from database + Add fixtures with project templates and data

--- a/eda/templates/index.html
+++ b/eda/templates/index.html
@@ -49,7 +49,7 @@
     <!------------------------>
 
     <script src="{% static 'ioda/js/ejsS/ejsS.v1.max.js' %}"></script>
-    <!--script src="js/displayed_objects/do_connection.js"></script>
+    <!--script src="js/displayed_objects/do_connection.js"></script>7
     <script src="js/displayed_objects/do_graph.js"></script>
     <script src="js/displayed_objects/do_node.js"></script>
     <script src="js/displayed_objects/do_panel.js"></script-->
